--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <button>Add</button>
     </form>
 
-    <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
+    <div class="copyright">Copyright &copy; 2022</div>
   </footer>
 
   <script src='sandbox.js'></script>
