--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,6 @@
     <div class="copyright">Copyright &copy; 2022</div>
   </footer>
 
-  <script src='app.js'></script>
+  <script type="module" src='app.js'></script>
 </body>
 </html>
